bugfix for download

--- a/NCloud/NCloud/Views/Drive/FolderSettings.cshtml
+++ b/NCloud/NCloud/Views/Drive/FolderSettings.cshtml
@@ -62,7 +62,7 @@
                 </div>
             </form>
             <div class="d-flex w-100 justify-content-center input-group mt-4">
-                <a asp-controller="Drive" class="btn btn-primary" asp-action="DownloadFolder" asp-route-folderName="@Model.OldName"><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded align-middle" download /></a>
+                <a asp-controller="Drive" class="btn btn-primary" asp-action="DownloadFolder" asp-route-folderName="@Model.OldName"><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded align-middle" /></a>
                 <button type="button" class="btn btn-secondary" onclick="copyItemToCloudClipBoard('@Url.Action("CopyFolderToCloudClipboard")','@Model?.Info?.Name')"><img src="~/utilities/copy.svg" width=" 20" height="20" class="align-middle" /></button>
                 <button type="button" class="btn btn-danger border border-danger border-3" id="modalLaunchBtn"><img src="~/utilities/trash.svg" width="20" height="20" class="rounded align-middle" /></button>
             </div>
