--- a/NCloud/NCloud/Views/Shared/Components/DriveDetailsTable/Table.cshtml
+++ b/NCloud/NCloud/Views/Shared/Components/DriveDetailsTable/Table.cshtml
@@ -152,7 +152,7 @@
                                     </button>
 
                                     <button type="button" class="btn btn-secondary" onclick="copyItemToCloudClipBoard('@Url.Action("CopyFolderToCloudClipboard","Drive")','@item.Info.Name')"><img src="~/utilities/copy.svg" width=" 20" height="20" class="align-middle"/></button>
-                                    <a asp-controller="Drive" class="btn btn-secondary" asp-action="DownloadFolder" asp-route-folderName="@item.Info.Name" download><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded align-middle"/></a>
+                                    <a asp-controller="Drive" class="btn btn-secondary" asp-action="DownloadFolder" asp-route-folderName="@item.Info.Name"><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded align-middle"/></a>
                                     <button type="button" class="btn btn-danger" onclick="DeleteDirModal('@item.Info.Name')"><img src="~/utilities/trash.svg" width=" 20" height="20" class="rounded align-middle" /></button>
                                 </div>
                             </div>
@@ -309,7 +309,7 @@
                                     </button>
 
                                     <button type="button" class="btn btn-secondary" onclick="copyItemToCloudClipBoard('@Url.Action("CopyFileToCloudClipboard","Drive")','@item.Info.Name')"><img src="~/utilities/copy.svg" width=" 20" height="20" class="align-middle"/></button>
-                                    <a asp-controller="Drive" class="btn btn-secondary" asp-action="DownloadFile" asp-route-fileName="@item.Info.Name" download><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded align-middle"/></a>
+                                    <a asp-controller="Drive" class="btn btn-secondary" asp-action="DownloadFile" asp-route-fileName="@item.Info.Name"><img src="~/utilities/cloud-download.svg" width=" 20" height="20" class="rounded align-middle"/></a>
                                     <a asp-controller="Editor" class="btn btn-secondary" asp-action="EditorHub" asp-route-fileName="@item.Info.Name"><img src="~/utilities/editor-general.svg" width=" 20" height="20" class="rounded align-middle" /></a>
                                     <button type="button" class="btn btn-danger" onclick="DeleteFileModal('@item.Info.Name')"><img src="~/utilities/trash.svg" width=" 20" height="20" class="rounded align-middle" /></button>
                                 </div>
