--- a/NCloud/NCloud/Views/Sharing/Details.cshtml
+++ b/NCloud/NCloud/Views/Sharing/Details.cshtml
@@ -16,6 +16,7 @@
                 </ol>
             </nav>
         </div>
+        </div>
     </div>
     <div class="d-flex justify-content-between">
         <div class="">
