--- a/NCloud/NCloud/Views/Sharing/DownloadItems.cshtml
+++ b/NCloud/NCloud/Views/Sharing/DownloadItems.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DriveDownloadViewModel
 
 @{
-    ViewData["title"] = "Download Items";
+    ViewData["title"] = "Download";
     int i = 0;
 }
 
