--- a/NCloud/NCloud/Views/Home/Index.cshtml
+++ b/NCloud/NCloud/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
         <h3>Welcome to @Constants.AppName!</h3>
     </div>
     <div class="w-100 justify-content-center text-center">
-        <a asp-action="Login" asp-controller="Account" class="btn btn-primary w-25">Login</a>
-        <a asp-action="Register" asp-controller="Account" class="btn btn-primary w-25 ms-3">Register</a>
+        <a asp-action="Login" asp-controller="UserManagement" class="btn btn-primary w-25">Login</a>
+        <a asp-action="Register" asp-controller="UserManagement" class="btn btn-primary w-25 ms-3">Register</a>
     </div>
 </div>
