--- a/NCloud/NCloud/Views/UserManagement/Login.cshtml
+++ b/NCloud/NCloud/Views/UserManagement/Login.cshtml
@@ -8,7 +8,7 @@
         <div class="col-12 col-md-8 col-lg-6 col-xl-5">
             <div class="card bg-light text-dark border border-3 border-primary" style="border-radius: 1rem;">
                 <div class="card-body px-5 pt-3 pb-5 text-center">
-                    <form asp-controller="Account" asp-action="Login" asp-route-returnUrl="@(ViewBag.ReturnUrl ?? "/DashBoard/Index")">
+                    <form asp-controller="UserManagement" asp-action="Login" asp-route-returnUrl="@(ViewBag.ReturnUrl ?? "/DashBoard/Index")">
                         <div class="mb-md-5 mt-md-4 pb-5">
                             <img src="~/utilities/cloud_logo.png" width="200" class="ms-2" />
                             <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
@@ -28,7 +28,7 @@
                         <div asp-validation-summary="All" class="text-danger"></div>
                         <div>
                             <p class="mb-0">
-                                Don't have an account? <a asp-controller="Account" asp-action="Register" class="text-primary-50 fw-bold">Sign Up</a>
+                                Don't have an account? <a asp-controller="UserManagement" asp-action="Register" class="text-primary-50 fw-bold">Sign Up</a>
                             </p>
                         </div>
                     </form>
