--- a/NCloud/NCloud/Views/_ViewStart.cshtml
+++ b/NCloud/NCloud/Views/_ViewStart.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    if (ViewContext.RouteData.Values["controller"] != null && (ViewContext.RouteData.Values["controller"]!.ToString() == "Account" || ViewContext.RouteData.Values["controller"]!.ToString() == "Home" || ViewContext.RouteData.Values["controller"]!.ToString() == "Web"))
+    if (ViewContext.RouteData.Values["controller"] != null && (ViewContext.RouteData.Values["controller"]!.ToString() == "UserManagement" || ViewContext.RouteData.Values["controller"]!.ToString() == "Home" || ViewContext.RouteData.Values["controller"]!.ToString() == "Web"))
     {
         Layout = "_Layout";
     }
