smtp client added

--- a/NCloud/NCloud/Views/Admin/Index.cshtml
+++ b/NCloud/NCloud/Views/Admin/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="d-flex justify-content-between w-100 bg-primary rounded mb-3">
-    <a asp-action="Index" asp-controller="UserManagement" class="btn btn-primary"><img src="~/utilities/arrow-left-circle.svg" width=" 20" height="20" class="rounded align-middle" /></a>
+    <a asp-action="UserPage" asp-controller="UserManagement" class="btn btn-primary"><img src="~/utilities/arrow-left-circle.svg" width=" 20" height="20" class="rounded align-middle" /></a>
     <span class="btn"><img src="~/utilities/admin-dashboard.svg" width=" 20" height="20" class="rounded align-middle" /></span>
 </div>
 <div class="container-fluid d-flex justify-content-center align-items-center min-vh-100">
