--- a/NCloud/NCloud/Views/Shared/Components/DriveDetailsTable/Table.cshtml
+++ b/NCloud/NCloud/Views/Shared/Components/DriveDetailsTable/Table.cshtml
@@ -54,7 +54,7 @@
                                     </tr>
                                     <tr class="align-middle">
                                         <td class="ps-3 w-25 text-break">
-                                            Shared in @Constants.AppName
+                                            Shared in app
                                         </td>
                                         <td class="text-break">
                                             @if (item.IsConnectedToApp)
@@ -69,7 +69,7 @@
                                     </tr>
                                     <tr class="align-middle">
                                         <td class="ps-3 w-25 text-break">
-                                            Public
+                                            Shared on web
                                         </td>
                                         <td class="text-break">
                                             @if (item.IsConnectedToWeb)
@@ -212,7 +212,7 @@
                                     </tr>
                                     <tr>
                                         <td class="ps-3">
-                                            Shared in @Constants.AppName
+                                            Shared in app
                                         </td>
                                         <td>
                                             @if (item.IsConnectedToApp)
@@ -227,7 +227,7 @@
                                     </tr>
                                     <tr>
                                         <td class="ps-3">
-                                            Public
+                                            Shared on web
                                         </td>
                                         <td>
                                             @if (item.IsConnectedToWeb)
