--- a/NCloud/NCloud/Views/Shared/Components/SharingDetailsTable/Table.cshtml
+++ b/NCloud/NCloud/Views/Shared/Components/SharingDetailsTable/Table.cshtml
@@ -48,7 +48,7 @@
                                         </tr>
                                         <tr>
                                             <td>
-                                                Shared in @Constants.AppName
+                                                Shared in app
                                             </td>
                                             <td>
                                                 @if (item.IsConnectedToApp)
@@ -63,7 +63,7 @@
                                         </tr>
                                         <tr>
                                             <td>
-                                                Public
+                                                Shared on web
                                             </td>
                                             <td>
                                                 @if (item.IsConnectedToWeb)
@@ -152,7 +152,7 @@
                                     </tr>
                                     <tr>
                                         <td>
-                                            Shared in @Constants.AppName
+                                            Shared in app
                                         </td>
                                         <td>
                                             @if (item.IsConnectedToApp)
@@ -167,7 +167,7 @@
                                     </tr>
                                     <tr>
                                         <td>
-                                            Public
+                                            Shared on web
                                         </td>
                                         <td>
                                             @if (item.IsConnectedToWeb)
