--- a/NCloud/NCloud/Areas/Identity/Pages/Error.cshtml
+++ b/NCloud/NCloud/Areas/Identity/Pages/Error.cshtml
@@ -1,5 +1,4 @@
 ﻿@page
-@using NCloud.Areas.Identity.Pages
 @model ErrorModel
 @{
     ViewData["Title"] = "Error";
@@ -14,3 +13,11 @@
         <strong>Request ID:</strong> <code>@Model.RequestId</code>
     </p>
 }
+
+<h3>Development Mode</h3>
+<p>
+    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
+</p>
+<p>
+    <strong>Development environment should not be enabled in deployed applications</strong>, as it can result in sensitive information from exceptions being displayed to end users. For local debugging, development environment can be enabled by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>, and restarting the application.
+</p>
