--- a/NCloud/NCloud/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/NCloud/NCloud/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,6 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using NCloud.Areas.Identity
-
-
-NCloud.Pages
+@using NCloud.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using NCloud.Users
