--- a/NCloud/NCloud/Views/Home/Index.cshtml
+++ b/NCloud/NCloud/Views/Home/Index.cshtml
@@ -4,10 +4,10 @@
 
 <div class="row">
     <div class="w-100 justify-content-center text-center">
-        <img src="/utilities//cloud_logo.png" class="img-fluid" width="400" />
+        <img src="@Constants.Branding.LogoPath" class="img-fluid" width="400" />
     </div>
     <div class="col-auto w-100 mb-5 justify-content-center text-center fw-bold">
-        <h3>Welcome to @Constants.AppName!</h3>
+        <h3>Welcome to @Constants.Branding.AppName!</h3>
     </div>
     <div class="w-100 justify-content-center text-center">
         <a asp-action="Login" asp-controller="UserManagement" class="btn btn-primary w-25">Login</a>
