--- a/NCloud/NCloud/Views/UserManagement/Login.cshtml
+++ b/NCloud/NCloud/Views/UserManagement/Login.cshtml
@@ -10,7 +10,7 @@
                 <div class="card-body px-5 pt-3 pb-5 text-center">
                     <form asp-controller="UserManagement" asp-action="Login" asp-route-returnUrl="@(ViewBag.ReturnUrl ?? "/DashBoard/Index")">
                         <div class="mb-md-5 mt-md-4 pb-5">
-                            <img src="~/utilities/cloud_logo.png" width="200" class="ms-2" />
+                            <img src="@Constants.Branding.LogoPath" width="200" class="ms-2" />
                             <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
                             <p class="text-white-50 mb-5">Please enter your Username and Password!</p>
                             <div class="form-outline form-white mb-4">
@@ -25,13 +25,18 @@
                             </div>
                             <button class="btn btn-primary btn-lg px-5" type="submit">Login</button>
                         </div>
-                        <div asp-validation-summary="All" class="text-danger"></div>
-                        <div>
-                            <p class="mb-0">
-                                Don't have an account? <a asp-controller="UserManagement" asp-action="Register" class="text-primary-50 fw-bold">Sign Up</a>
-                            </p>
-                        </div>
                     </form>
+                    <div>
+                        <p class="mb-0">
+                            Forgot your password? <a asp-area="Identity" asp-page="/Account/ForgotPassword" class="text-primary-50 fw-bold">Forgot password</a>
+                        </p>
+                    </div>
+                    <div asp-validation-summary="All" class="text-danger"></div>
+                    <div>
+                        <p class="mb-0">
+                            Don't have an account? <a asp-controller="UserManagement" asp-action="Register" class="text-primary-50 fw-bold">Sign Up</a>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
