--- a/NCloud/NCloud/Views/UserManagement/Register.cshtml
+++ b/NCloud/NCloud/Views/UserManagement/Register.cshtml
@@ -11,7 +11,7 @@
                 <div class="card-body px-5 pt-3 pb-5 text-center">
                     <form asp-controller="UserManagement" asp-action="Register" asp-route-returnUrl="@ViewBag.ReturnUrl">
                         <div class="mb-md-5 mt-md-4 pb-5">
-                            <img src="~/utilities/cloud_logo.png" width="200" class="ms-2" />
+                            <img src="@Constants.Branding.LogoPath" width="200" class="ms-2" />
                             <h2 class="fw-bold mb-2 text-uppercase">Registration</h2>
                             <p class="text-white-50 mb-5">Please enter the required information!</p>
                             <div class="form-outline form-white mb-4">
