canges to startup manager

--- a/NCloud/NCloud/Views/UserManagement/UserPage.cshtml
+++ b/NCloud/NCloud/Views/UserManagement/UserPage.cshtml
@@ -54,7 +54,7 @@
                                     }
                                     <div class="col-6 w-100 text-center mb-3">
                                         <a class="btn btn-primary border border-primary border-3" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
-                                            <span class="fw-bold align-middle mx-2">Manage User</span>
+                                            <span class="fw-bold align-middle mx-2">Manage Account</span>
                                             <img src="/utilities/gear.svg" width="20" height="20" class="rounded align-middle">
                                         </a>
                                     </div>
