--- a/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
+++ b/NCloud/NCloud/Views/Shared/_NavBarLayout.cshtml
@@ -54,7 +54,7 @@
                         <div class="p-2 d-flex justify-content-center w-100 border border-3 rounded border-dark user-button">
                             <div>
                                 <img src="/utilities/person-circle.svg" alt="profile_icon" width="30" height="30" class="rounded-circle m-1">
-                                <span class="d-inline m-1">User</span>
+                                <span class="d-inline m-1">Account</span>
                             </div>
                         </div>
                     </a>
