new icons added

--- a/NCloud/NCloud/Views/Shared/Components/DriveDetailsTable/Table.cshtml
+++ b/NCloud/NCloud/Views/Shared/Components/DriveDetailsTable/Table.cshtml
@@ -21,7 +21,7 @@
                         <details>
                             <summary>
                                 <span id="iconforitemtype">
-                                    <img src="@item.IconPath" width=" 20" height="20" class="item align-center">
+                                    <img src="@item.IconPath" width="@Constants.IconSizeFolder" class="item align-center">
                                 </span>
                                 <a asp-action="Details" asp-route-folderName="@item.Info.Name" class="itemlink">@item.Info!.Name</a>
                             </summary>
@@ -171,12 +171,12 @@
                         <details>
                             <summary>
                                 <span id="iconforitemtype">
-                                    <img src="@item.IconPath" width=" 20" height="20" class="item align-center">
+                                    <img src="@item.IconPath" width="@Constants.IconSizeFile" class="item align-center fileicon">
                                 </span>
                                 <span class="itemlink">@item.Info!.Name</span>
                             </summary>
                             <fieldset class="border border-dark p-2 m-2 rounded">
-                                <legend class="btn btn-outline-primary rounded-pill w-auto">Details</legend>
+                                <legend class="w-100 background-color rounded ps-3 py-2 h3">Details</legend>
                                 <table class="table table-striped rounded">
                                     <tr>
                                         <td class="ps-3">
