--- a/NCloud/NCloud/wwwroot/css/site.css
+++ b/NCloud/NCloud/wwwroot/css/site.css
@@ -17,6 +17,10 @@ body {
     margin-bottom: 60px;
 }
 
+summary {
+    line-height: 40px;
+}
+
 details summary {
     list-style: none;
 }
@@ -448,4 +452,9 @@ progress {
 
 .user-button:hover {
     background-color: #0d6efd;
+}
+
+.fileicon{
+    margin-left:5px;
+    margin-right:5px;
 }
